@@ -345,6 +345,7 @@ Rhett Robinson
 Luciano Miguel Ferreira Rocha
 Andrew Rodland
 Miguel Rodríguez (migrax)
+Martin Rosinski
 Bob Rossi
 Jason Roth
 Jean-Francois Roy
